spring-hazelcast/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-hazelcast-service
spec:
  selector:
    app: spring-hazelcast
  clusterIP: None
  ports:
    - name: app-server
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: hazel-cache
      protocol: TCP
      port: 5701
      targetPort: 5701
